    * "colorscale" (not yet implemented)
    * "fontsizemode" (not yet implemented)
    * "innerposition" (equivalent to "position")
    * "interactions" (not yet implemented)
    * "layout" (not yet implemented)
    * "legend" (not yet implemented)
    * "nextseriesindex" (read-only, used by `scatter` graphics objects)
    * "positionconstraint" (replacement for "activepositionproperty"
      which is now a hidden property. No plans for removal.)
    * "toolbar" (not yet implemented)
    * "xaxis" (not yet implemented)
    * "yaxis" (not yet implemented)
    * "zaxis" (not yet implemented)

### Alphabetical list of new functions added in Octave 7

* `getpixelposition`
* `endsWith`
* `memory`
* `rng`
* `startsWith`
* `streamribbon`

### Deprecated functions and properties

The following functions and properties have been deprecated in Octave 7
and will be removed from Octave 9 (or whatever version is the second
major release after 7):

- Functions

  Function               | Replacement
  -----------------------|------------------
                         |

- Properties

  Object           | Property      | Value
  -----------------|---------------|------------
                   |               |

### Removed functions and properties

The following functions and properties were deprecated in Octave 5
and have been removed from Octave 7.

- Functions

  Function                 | Replacement
  -------------------------|------------------
  `output_max_field_width` | `output_precision`
  `is_keyword`             | `iskeyword`

- Properties

  Object           | Property      | Value
  -----------------|---------------|------------
  `text`           | `fontangle`   | `"oblique"`
  `uibuttongroup`  | `fontangle`   | `"oblique"`
  `uicontrol`      | `fontangle`   | `"oblique"`
  `uipanel`        | `fontangle`   | `"oblique"`
  `uitable`        | `fontangle`   | `"oblique"`

### Old release news

- [Octave 6.x](etc/NEWS.6)
- [Octave 5.x](etc/NEWS.5)